# search-compare

./: .env.example  .gitignore  pyproject.toml
notebooks/: example_usage.ipynb
src/search_compare/: __init__.py  comparison.py  models.py  picoc.py  query.py  query_builder.py  search_manager.py
src/search_compare/implementations/scopus/: __init__.py  client.py  config.py  query_builder.py
src/search_compare/interfaces/: __init__.py  protocols.py
