[project]
name = "search-compare"
version = "0.1.0"
description = "Compare search results from two PICOC-based query strings"
readme = "README.md"
authors = [
    { name = "Renan Passos", email = "renanvmsp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]
